--- a/emzed/core/explorers/widgets/form.ui
+++ b/emzed/core/explorers/widgets/form.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>_ChooseSpectraWidget</class>
- <widget class="QWidget" name="_ChooseSpectraWidget">
+ <class>Form</class>
+ <widget class="QWidget" name="Form">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>160</width>
-    <height>111</height>
+    <width>182</width>
+    <height>141</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -27,13 +27,13 @@
     <enum>QLayout::SetMinimumSize</enum>
    </property>
    <property name="leftMargin">
-    <number>0</number>
+    <number>5</number>
    </property>
    <property name="topMargin">
-    <number>0</number>
+    <number>5</number>
    </property>
    <property name="rightMargin">
-    <number>0</number>
+    <number>5</number>
    </property>
    <property name="bottomMargin">
     <number>0</number>
@@ -41,7 +41,7 @@
    <item>
     <widget class="QFrame" name="frame">
      <property name="sizePolicy">
-      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+      <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
        <horstretch>0</horstretch>
        <verstretch>1</verstretch>
       </sizepolicy>
@@ -59,9 +59,6 @@
       <enum>QFrame::Raised</enum>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_2" stretch="1,1">
-      <property name="spacing">
-       <number>5</number>
-      </property>
       <property name="sizeConstraint">
        <enum>QLayout::SetMinimumSize</enum>
       </property>
@@ -93,7 +90,7 @@
       <item>
        <widget class="QListWidget" name="_spectra">
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+         <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
@@ -106,8 +103,8 @@
         </property>
         <property name="maximumSize">
          <size>
-          <width>150</width>
-          <height>80</height>
+          <width>16777215</width>
+          <height>100</height>
          </size>
         </property>
        </widget>
